fix main-content padding-top on mobile. fix archive-programacion post-title on mobile. close #192

--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -113,7 +113,7 @@ $margin-large = ($gutter * 5)
 // BASIC
 
 #main-content
-  padding-top: 74px + $margin-tiny
+  padding-top: 75px + $margin-tiny
 
 // ****************************************************** 
 
